Update 'compiled_docs' file :page_facing_up: